# recapcha_solver

./: Dockerfile  Makefile  README.md  pyproject.toml
src/recapcha_solver/: __init__.py  app.py  utils.py
